[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/fixselected.png" type="Texture" id=1]
[ext_resource path="res://Scenes/DisasterScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/fixhover.png" type="Texture" id=4]
[ext_resource path="res://Art/fix.png" type="Texture" id=5]

[node name="DisasterScreen" type="Control"]
margin_left = 110.875
margin_top = -125.109
margin_right = 150.875
margin_bottom = -85.1087
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
disasters = {
"Ads": 2500.0,
"MonitorBroke": 3000.0,
"PowerOutage": 2000.0
}

[node name="DisasterTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = -79.7075
margin_top = 8.21926
margin_right = -15.7075
margin_bottom = 40.2193
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = -71.0
margin_top = -31.0
margin_right = 40.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 3 )
text = "Problem: 
Power outage

Cost: 				$9999"

[connection signal="timeout" from="DisasterTimer" to="." method="_on_DisasterTimer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
